--- a/src/components/Login/style.css
+++ b/src/components/Login/style.css
@@ -1,3 +1,7 @@
+.login {
+  text-align: center;
+}
+
 .login-card {
   max-width: 500px;
   width: 100%;
@@ -20,4 +24,10 @@
 .login-select {
   min-width: 250px;
   width: 100%;
+}
+
+@media (max-width: 400px) {
+  .test {
+    padding: 0 10px;
+  }
 }
